fix safety contact layout bug

--- a/frontend/src/components/chat/ChatHome.module.css
+++ b/frontend/src/components/chat/ChatHome.module.css
@@ -11,12 +11,6 @@
     color: #1c324d;
 }
 
-.btnBox {
-    /* position: relative;
-    margin-top: 1px;
-    left: 4.5rem; */
-}
-
 .addbtn {
     height: 100%;
     width: 80%;
