--- a/frontend/src/components/home/SafetyContact.module.css
+++ b/frontend/src/components/home/SafetyContact.module.css
@@ -6,12 +6,14 @@
     background-repeat: no-repeat;
     min-width: 1000px;
     min-height: 1000px;
+    overflow: hidden;
 }
 
 .container {
     margin-bottom: 5rem;
     padding: 0 1rem;
     color: white;
+    width: 100%;
 }
 
 .tab {
@@ -62,13 +64,18 @@
     height: 30rem;
 }
 
+.body {
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+}
 .safetyBox {
     width: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 8rem;
+    height: 100%;
     left: auto;
     right: auto;
     padding: 1rem 0rem 1.5rem;
@@ -108,7 +115,8 @@
 .contact {
     width: 80%;
     border-radius: 0.5rem;
-    height: 5rem;
+    min-height: 3rem;
+    max-height: 5rem;
     border: 1px solid;
     margin: 1rem 0;
     font-weight: 500;
@@ -122,6 +130,10 @@
 }
 
 @media only screen and (max-width: 850px) {
+    .safetyBox {
+        height: 8rem;
+    }
+
     .body {
         background: url('../../assets/safetyBackground.jpg');
         height: 100%;
